k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
  labels:
    istio.io/rev: asm-1-23
    pod-security.kubernetes.io/enforce: restricted
